# mlops-homework2

./: .gitignore  README.md  mlflow.db  pyproject.toml
app/: config.py  deployment_mlflow.py  main.py
app/model/: optimizer.py  trainer.py
app/preprocessing/: data_loader.py  feature_processor.py
app/utils/: metrics.py  visualization.py
artifacts/: input_example.csv
mlruns/0/: meta.yaml
mlruns/832356951089745507/: meta.yaml
mlruns/832356951089745507/006b5f4513f74d8691124647ba21fdd9/: meta.yaml
mlruns/832356951089745507/010b8c3b302640218f73a66c2e5e1321/: meta.yaml
mlruns/832356951089745507/02c01aa1dc4c47e9b259cd28a8b90cb1/: meta.yaml
mlruns/832356951089745507/0389f26aa175437c84bcccaf456b9364/: meta.yaml
mlruns/832356951089745507/04cb6f8daa434ec2a7f8f7cdd39bb176/: meta.yaml
mlruns/832356951089745507/05008f8913c94d44a6dff1c41b645a44/: meta.yaml
mlruns/832356951089745507/05d5497ded704c78ab7e9886b8e9b21c/: meta.yaml
mlruns/832356951089745507/09c6b9b5f5dd4ac5930ccaf77f9a896f/: meta.yaml
mlruns/832356951089745507/0dcd10dde7294aa6bad6b43d86db8763/: meta.yaml
mlruns/832356951089745507/1d0ec7c9d6144913aac5aa9446709c05/: meta.yaml
mlruns/832356951089745507/21fd52ec76414c9a8bfe6d88ddc22efa/: meta.yaml
mlruns/832356951089745507/2282d48c58834d84a6d72f4184e40b3f/: meta.yaml
mlruns/832356951089745507/253525ae25444074b944b5068590e672/: meta.yaml
mlruns/832356951089745507/2ba86030d3aa4c89a54fa726056f2774/: meta.yaml
mlruns/832356951089745507/2d32e8cd816f4c999c7ecd261b63a37a/: meta.yaml
mlruns/models/employee_access_model/: meta.yaml
(+509 files in other folders)
