[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Shakhzod Yusupov <YuShakhzod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
catboost = "^1.2.7"
scikit-learn = "^1.6.0"
ipywidgets = "^8.1.5"
ipython = "^8.31.0"
optuna = "^4.1.0"
seaborn = "^0.13.2"
mlflow = "^2.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
